Clicking the settings tile brings you to the Connect/disconnect from Podio page (weird conflicts - overwriting the remote version)

--- a/home-context-my-toolbox.html
+++ b/home-context-my-toolbox.html
@@ -111,7 +111,6 @@ License: You must have a valid license purchased only from themeforest(the above
 					</div>
 				</div>
                 </a>
-                <a href="socialmedia.html">
                 <div class="tile bg-red">
 					<img src="assets_ltb/img/social-button.png" width=115 height=115 VSPACE=0 alt="">
 					<div class="tile-object">
@@ -123,9 +122,8 @@ License: You must have a valid license purchased only from themeforest(the above
 						</div>
 					</div>
 				</div>
-				</a>
 				<a href="profile-0.html">
-				<div class="tile bg-red">
+				<div class="tile selected bg-red">
 					<div class="tile-body">
 						<i class="fa fa-user"></i>
 					</div>
@@ -179,7 +177,6 @@ License: You must have a valid license purchased only from themeforest(the above
                         </div>
                     </div>
                 </div>
-                <a href="dont-panic.html">
 				<div class="tile bg-red">
 					<div class="tile-body">
                                             <br/>
@@ -193,7 +190,7 @@ License: You must have a valid license purchased only from themeforest(the above
 						</div>
 					</div>
 				</div>
-				</a>
+                <a href="./php/grant-podio-access.php">
 				<div class="tile bg-red">
 					<div class="tile-body">
 						<i class="fa fa-cogs"></i>
@@ -204,6 +201,7 @@ License: You must have a valid license purchased only from themeforest(the above
 						</div>
 					</div>
 				</div>
+				</a>
 				<div class="tile double selected bg-red">
 					<div class="corner">
 					</div>
