Added a modal window that shows an Ach So! related video. Uses responsive resizing of video iframe.

--- a/home-context-my-toolbox.html
+++ b/home-context-my-toolbox.html
@@ -77,8 +77,6 @@ License: You must have a valid license purchased only from themeforest(the above
 	<div class="page-content-wrapper">
 		<div class="page-content">
 			<!-- BEGIN PAGE CONTENT-->
-     
-
 			<div class="tiles">
               <div class="inner">
                 <a href="information.html">
@@ -166,17 +164,19 @@ License: You must have a valid license purchased only from themeforest(the above
                     <div class="tile-object">
                     </div>
                 </div>
-                </a>
-                <div class="tile bg-red">
-                    <div class="tile-body">
-                        <i class="fa fa-video-camera"></i>
-                    </div>
-                    <div class="tile-object">
-                        <div class="name">
-                             Ach So!
+                </a>                
+                <a data-toggle="modal" href="#basic">
+                    <div class="tile bg-red">
+                        <div class="tile-body">
+                            <i class="fa fa-video-camera"></i>
+                        </div>
+                        <div class="tile-object">
+                            <div class="name">
+                                 Ach So!
+                            </div>
                         </div>
                     </div>
-                </div>
+                </a>
 				<div class="tile bg-red">
 					<div class="tile-body">
                                             <br/>
@@ -227,6 +227,27 @@ License: You must have a valid license purchased only from themeforest(the above
 				</div>
               </div>
 			</div>
+			
+			<div class="modal fade" id="basic" tabindex="-1" role="basic" aria-hidden="true" style="display: none;">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal" aria-hidden="true"></button>
+                            <h4 class="modal-title">Ach So! Video Capturing and Annotation</h4>
+                        </div>
+                        <div class="modal-body" align="center">
+                          <div class="video-responsive">
+                            <iframe src="//player.vimeo.com/video/84383004" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> <p><a href="http://vimeo.com/84383004">AchSo!</a> from <a href="http://vimeo.com/medialabhelsinki">Media Lab Helsinki</a> on <a href="https://vimeo.com">Vimeo</a>.</p>                        </div>
+                          </div>    
+                        <div class="modal-footer">
+                            <button type="button" class="btn default" data-dismiss="modal">Close</button>
+                        </div>
+                    </div>
+                    <!-- /.modal-content -->
+                </div>
+                <!-- /.modal-dialog -->
+            </div>
+
 			<!-- END PAGE CONTENT-->
 		</div>
 	</div>
