Added a tile My Organisation, to link it to the Podio app. However, Podio has no url scheme defined, so it is now linked to Facebook, to demo opening of apps from the LTB

--- a/home-context-my-toolbox.html
+++ b/home-context-my-toolbox.html
@@ -202,6 +202,18 @@ License: You must have a valid license purchased only from themeforest(the above
 					</div>
 				</div>
 				</a>
+                <a href="fb://profile">
+                    <div class="tile bg-red">
+                        <div class="tile-body">
+                            <i class="fa fa-building-o"></i>
+                        </div>
+                        <div class="tile-object">
+                            <div class="name">
+                                 My Organisation
+                            </div>
+                        </div>
+                    </div>
+                </a>
 				<div class="tile double selected bg-red">
 					<div class="corner">
 					</div>
