--- a/home-context-my-toolbox.html
+++ b/home-context-my-toolbox.html
@@ -114,6 +114,7 @@
 					</div>
 				</div>
                 </a>
+                <a href="socialmedia.html">
                 <div class="tile bg-red">
 					<img src="assets_ltb/img/social-button.png" width=115 height=115 VSPACE=0 alt="">
 					<div class="tile-object">
@@ -125,6 +126,7 @@
 						</div>
 					</div>
 				</div>
+				</a>
 				<a href="profile-0.html">
 				<div class="tile selected bg-red">
 					<div class="tile-body">
@@ -335,7 +337,7 @@ jQuery(document).ready(function() {
 
 <script>
     $(function(){
-      $("#includeSidebarMenu").load("sidebar-menu.html"); 
+      $("#includeSidebarMenu").load("snippets/sidebar-menu.html"); 
     });
 </script> 
 <!-- END JAVASCRIPTS -->
