--- a/profile-3.html
+++ b/profile-3.html
@@ -1012,7 +1012,7 @@ jQuery(document).ready(function() {
 
 <script>
     $(function(){
-      $("#includeSidebarMenu").load("sidebar-menu.html"); 
+      $("#includeSidebarMenu").load("snippets/sidebar-menu.html"); 
     });
 </script> 
 <!-- END JAVASCRIPTS -->
