--- a/head-injury.html
+++ b/head-injury.html
@@ -251,7 +251,7 @@ jQuery(document).ready(function() {
 
 <script>
     $(function(){
-      $("#includeSidebarMenu").load("sidebar-menu.html"); 
+      $("#includeSidebarMenu").load("snippets/sidebar-menu.html"); 
     });
 </script> 
 <!-- END JAVASCRIPTS -->
