--- a/information-context-rotary-drilling-rig.html
+++ b/information-context-rotary-drilling-rig.html
@@ -224,7 +224,7 @@ jQuery(document).ready(function() {
 
 <script>
     $(function(){
-      $("#includeSidebarMenu").load("sidebar-menu.html"); 
+      $("#includeSidebarMenu").load("snippets/sidebar-menu.html"); 
     });
 </script> 
 <!-- END JAVASCRIPTS -->
