--- a/login.html
+++ b/login.html
@@ -83,7 +83,7 @@ License: You must have a valid license purchased only from themeforest(the above
 			<label class="checkbox">
 			<input type="checkbox" name="remember" value="1"/> Remember me </label>
 			<button type="submit" class="btn red pull-right">
-			Login <i class="m-icon-swapright m-icon-white"></i>
+			Login <i class="fa fa-arrow-circle-o-right"></i>
 			</button>
 		</div>
 		<div class="login-options">
