--- a/profile-0.html
+++ b/profile-0.html
@@ -851,7 +851,7 @@ jQuery(document).ready(function() {
 
 <script>
     $(function(){
-      $("#includeSidebarMenu").load("sidebar-menu.html"); 
+      $("#includeSidebarMenu").load("snippets/sidebar-menu.html"); 
     });
 </script> 
 <!-- END JAVASCRIPTS -->
