--- a/profile-4.html
+++ b/profile-4.html
@@ -1005,7 +1005,7 @@ jQuery(document).ready(function() {
 
 <script>
     $(function(){
-      $("#includeSidebarMenu").load("sidebar-menu.html"); 
+      $("#includeSidebarMenu").load("snippets/sidebar-menu.html"); 
     });
 </script> 
 <!-- END JAVASCRIPTS -->
