Updated tile names and created missing links on all pages.

--- a/create.html
+++ b/create.html
@@ -90,7 +90,7 @@
 					</div>
 					<div class="tile-object">
 						<div class="name">
-							Create new
+							Create New
 						</div>
 					</div>
 				</div>
