--- a/information.html
+++ b/information.html
@@ -124,18 +124,18 @@
 
 					</div>
 				</div>
-								<div class="tile  bg-green">
+                <a href= "first-aid.html">
+                  <div class="tile  bg-green">
 					<div class = "tile-body">
 						<i class ="fa fa-shield"></i>
 					</div>
 					<div class="tile-object">
 						<div class="name">						
-							Health and Safety
+							Health & Safety
 						</div>
-
 					</div>
-				</div>
-				
+				  </div>
+				</a>
 				<a href= "home-context-my-toolbox.html">
 	              	<div class="tile bg-red">
 						<div class="tile-body">
