--- a/suggestions.html
+++ b/suggestions.html
@@ -91,7 +91,7 @@
 					<div class="tile-object">
 					
 						<div class="name">
-							Make a suggestion
+							Make a Suggestion
 						</div>
 					</div>
               	</div>
@@ -106,7 +106,7 @@
 						<div class="tile-object">	
 					
 							<div class="name">
-								My suggestions
+								My Suggestions
 						</div>
 					</div>
 				</div>
