--- a/home-context-my-toolbox.html
+++ b/home-context-my-toolbox.html
@@ -106,7 +106,7 @@
 					</div>
 					<div class="tile-object">
 						<div class="name">
-							 Friends
+							 My Network
 						</div>
 						<div class="number">
 							 4
@@ -185,19 +185,19 @@
                     </div>
                 </a>
                 <a href="dont-panic.html">
-				<div class="tile bg-red">
-					<div class="tile-body">
-                                            <br/>
-                                            <h1>Don't</h1>
-                                            <br/>
-                                            <h1>Panic</h1>
-					</div>
-					<div class="tile-object">
-						<div class="name">
-							 Get Help
-						</div>
-					</div>
-				</div>
+    				<div class="tile bg-red">
+    					<div class="tile-body">
+                            <br/>
+                            <h1>Don't</h1>
+                            <br/>
+                            <h1>Panic</h1>
+    					</div>
+    					<div class="tile-object">
+    						<div class="name">
+    							 Get Help
+    						</div>
+    					</div>
+    				</div>
 				</a>
                 <a href="./php/grant-podio-access.php">
 				<div class="tile bg-red">
@@ -211,18 +211,6 @@
 					</div>
 				</div>
 				</a>
-                <a href="fb://profile">
-                    <div class="tile bg-red">
-                        <div class="tile-body">
-                            <i class="fa fa-building-o"></i>
-                        </div>
-                        <div class="tile-object">
-                            <div class="name">
-                                 My Organisation
-                            </div>
-                        </div>
-                    </div>
-                </a>
 				<div class="tile double selected bg-red">
 					<div class="corner">
 					</div>
