--- a/friends-list.html
+++ b/friends-list.html
@@ -81,7 +81,7 @@
 	<div class="page-content-wrapper">
 		<div class="page-content" style="min-height:428px !important">
 			<!-- BEGIN PAGE CONTENT-->
-			<div class="tiles">
+			<div class="tiles content-responsive">
                 <a href="profile.html">
                 <div class="tile double bg-red">
 					<div class="tile-body">
