--- a/profile-2.html
+++ b/profile-2.html
@@ -29,6 +29,7 @@
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700&subset=all" rel="stylesheet" type="text/css"/>
     <link href="assets/plugins/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
     <link href="assets/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+    <link href="assets_ltb/plugins/bootstrap/css/child/bootstrap.min-child.css" rel="stylesheet" type="text/css"/>
     <link href="assets/plugins/uniform/css/uniform.default.css" rel="stylesheet" type="text/css"/>
     <!-- END GLOBAL MANDATORY STYLES -->
     
@@ -38,6 +39,8 @@
     <link href="assets_ltb/css/child/style-responsive-child.css" rel="stylesheet" type="text/css"/>
     <link href="assets/css/plugins.css" rel="stylesheet" type="text/css"/>
     <link href="assets/css/themes/default.css" rel="stylesheet" type="text/css" id="style_color"/>
+    <link href="assets/css/pages/profile.css" rel="stylesheet" type="text/css">
+    <link href="assets/css/pages/portfolio.css" rel="stylesheet" type="text/css">
     <link href="assets/css/custom.css" rel="stylesheet" type="text/css"/>
     <!-- END THEME STYLES -->
     
@@ -81,37 +84,16 @@
 	<div class="page-content-wrapper">
 		<div class="page-content" style="min-height:873px !important">
 			<!-- BEGIN PAGE CONTENT-->
-			<div class="row profile">
+			<div class="row content-responsive">
 				<div class="col-md-12">
 					<!--BEGIN TABS-->
-					<div class="tabbable tabbable-custom tabbable-full-width">
-						<ul class="nav nav-tabs">
-							<li class="active">
-								<a href="#tab_1_1" data-toggle="tab">
-									 Overview
-								</a>
-							</li>
-							<li class="">
-								<a href="#tab_1_3" data-toggle="tab">
-									 Account
-								</a>
-							</li>
-							<li class="">
-								<a href="#tab_1_4" data-toggle="tab">
-									 Projects
-								</a>
-							</li>
-							<li class="">
-								<a href="#tab_1_6" data-toggle="tab">
-									 Discussions
-								</a>
-							</li>
-                            <li class="">
-								<a href="#tab_1_8" data-toggle="tab">
-									 Collections
-								</a>
-							</li>
-						</ul>
+					<div class="tabbable tabbable-full-width">
+						<div class="btn-group btn-group-solid mytabbar">
+						<button type="button" data-toggle="tab" href="#tab_1_1" class="btn red itemtab"><i class="fa fa-user"></i> Overview</button>
+						<button type="button" data-toggle="tab" href="#tab_1_3" class="btn red itemtab"><i class="fa fa-cogs"></i> Account</button>
+                        <button type="button" data-toggle="tab" href="#tab_1_4" class="btn red itemtab"><i class="fa fa-briefcase"></i> Projects</button>
+                        <button type="button" data-toggle="tab" href="#tab_1_6" class="btn red itemtab"><i class="fa fa-question"></i> Discussions</button>
+                        <button type="button" data-toggle="tab" href="#tab_1_8" class="btn red itemtab"><i class="fa fa-caret-square-o-right"></i> Collections</button>
 						<div class="tab-content">
 							<div class="tab-pane active" id="tab_1_1">
 								<div class="row">
@@ -386,8 +368,8 @@
 							</div>
 							<!--end tab-pane-->
 							<div class="tab-pane" id="tab_1_4">
-								<div class="row">
-									<div class="col-md-12">
+								<div class="row-custom">
+									<div class="col-md-custom">
 										<div class="add-portfolio">
 											<a href="#" class="btn icn-only green">
 												 Add a new Project <i class="m-icon-swapright m-icon-white"></i>
@@ -396,7 +378,7 @@
 									</div>
 								</div>
 								<!--end add-portfolio-->
-								<div class="row portfolio-block">
+								<div class="row-custom portfolio-block">
 									<div class="col-md-5">
 										<div class="portfolio-text">
 											<img src="assets/img/profile/portfolio/logo_metronic.jpg" alt="">
@@ -419,7 +401,7 @@
 									</div>
 								</div>
 								<!--end row-->
-								<div class="row portfolio-block">
+								<div class="row-custom portfolio-block">
 									<div class="col-md-5 col-sm-12 portfolio-text">
 										<img src="assets/img/profile/portfolio/logo_azteca.jpg" alt="">
 										<div class="portfolio-text-info">
@@ -438,7 +420,7 @@
 									</div>
 								</div>
 								<!--end row-->
-								<div class="row portfolio-block">
+								<div class="row-custom portfolio-block">
 									<div class="col-md-5 portfolio-text">
 										<img src="assets/img/profile/portfolio/logo_metropolia.png" alt="">
 										<div class="portfolio-text-info">
@@ -1088,12 +1070,20 @@
 <script src="assets/plugins/uniform/jquery.uniform.min.js" type="text/javascript"></script>
 <!-- END CORE PLUGINS -->
 
+<!-- BEGIN PAGE LEVEL PLUGINS -->
+<script type="text/javascript" src="assets/plugins/bootstrap-fileinput/bootstrap-fileinput.js"></script>
+<script type="text/javascript" src="assets/plugins/jquery-mixitup/jquery.mixitup.min.js"></script>
+<!-- END PAGE LEVEL PLUGINS -->
+<!-- BEGIN PAGE LEVEL SCRIPTS -->
 <script src="assets/scripts/core/app.js"></script>
+<script src="assets/scripts/custom/portfolio.js"></script>
+<!-- END PAGE LEVEL SCRIPTS -->
 
 <script>
 jQuery(document).ready(function() {       
    // initiate layout and plugins
-   App.init();
+    App.init();
+    Portfolio.init();
 });
 </script>
 
