--- a/createNew.html
+++ b/createNew.html
@@ -81,7 +81,7 @@
 	<div class="page-content-wrapper" >
 		<div class="page-content">
 			<!-- BEGIN PAGE CONTENT-->
-            <div class="row">
+            <div class="row content-responsive">
 				<div class="col-md-12">
 					<!-- BEGIN PORTLET-->
 					<div class="portlet box purple">
