--- a/profile-0.html
+++ b/profile-0.html
@@ -84,7 +84,7 @@
 	<div class="page-content-wrapper">
 		<div class="page-content" style="min-height:873px !important">
 			<!-- BEGIN PAGE CONTENT-->
-			<div class="row content-responsive">
+			<div class="row profile content-responsive">
 				<div class="col-md-12">
 					<!--BEGIN TABS-->
 					<div class="tabbable tabbable-full-width">
