--- a/first-aid.html
+++ b/first-aid.html
@@ -81,7 +81,7 @@
 	<div class="page-content-wrapper">
 		<div class="page-content">
 			<!-- BEGIN PAGE CONTENT-->
-			<div class="tiles">
+			<div class="tiles content-responsive">
               <div class="inner">	
               	<a href="head-injury.html">
 				<div class="tile bg-purple">
