--- a/head-injury.html
+++ b/head-injury.html
@@ -81,7 +81,7 @@
 	<div class="page-content-wrapper">
 		<div class="page-content">
 			<!-- BEGIN PAGE CONTENT-->
-			<div class="portlet box green">
+			<div class="portlet box green content-responsive">
 						<div class="portlet-title">
 							<div class="caption">
 								<i class="fa fa-reorder"></i>Head Injury
