--- a/home-context-my-toolbox.html
+++ b/home-context-my-toolbox.html
@@ -82,7 +82,7 @@
 		<div class="page-content">
 		    
 			<!-- BEGIN PAGE CONTENT-->
-			<div class="tiles">
+			<div class="tiles content content-responsive">
               <div class="inner">
                 <a href="information.html">
 				<div class="tile double-down bg-red">
