--- a/information-context-rotary-drilling-rig.html
+++ b/information-context-rotary-drilling-rig.html
@@ -81,7 +81,7 @@
 	<div class="page-content-wrapper">
 		<div class="page-content">
 			<!-- BEGIN PAGE CONTENT-->
-			<div class="tiles">
+			<div class="tiles content-responsive">
               <div class="inner">
               	<a href="search.html">
                   	<div class="tile bg-red">
