--- a/collection-2.html
+++ b/collection-2.html
@@ -38,6 +38,7 @@
     <link href="assets_ltb/css/child/style-responsive-child.css" rel="stylesheet" type="text/css"/>
     <link href="assets/css/plugins.css" rel="stylesheet" type="text/css"/>
     <link href="assets/css/themes/default.css" rel="stylesheet" type="text/css" id="style_color"/>
+	<link href="assets/css/pages/portfolio.css" rel="stylesheet" type="text/css">
     <link href="assets/css/custom.css" rel="stylesheet" type="text/css"/>
     <!-- END THEME STYLES -->
     
@@ -81,7 +82,7 @@
 	<div class="page-content-wrapper">
 		<div class="page-content" style="min-height:873px !important">
 			<!-- BEGIN PAGE CONTENT-->
-			<div class="row profile">
+			<div class="row content-responsive">
 				<div class="col-md-12">
                
 					<!--BEGIN TABS-->
@@ -242,12 +243,20 @@
 <script src="assets/plugins/uniform/jquery.uniform.min.js" type="text/javascript"></script>
 <!-- END CORE PLUGINS -->
 
+<!-- BEGIN PAGE LEVEL PLUGINS -->
+<script type="text/javascript" src="assets/plugins/bootstrap-fileinput/bootstrap-fileinput.js"></script>
+<script type="text/javascript" src="assets/plugins/jquery-mixitup/jquery.mixitup.min.js"></script>
+<!-- END PAGE LEVEL PLUGINS -->
+<!-- BEGIN PAGE LEVEL SCRIPTS -->
 <script src="assets/scripts/core/app.js"></script>
+<script src="assets/scripts/custom/portfolio.js"></script>
+<!-- END PAGE LEVEL SCRIPTS -->
 
 <script>
 jQuery(document).ready(function() {       
    // initiate layout and plugins
    App.init();
+   Portfolio.init();
 });
 </script>
 
