--- a/socialmedia-context-minig-excavator.html
+++ b/socialmedia-context-minig-excavator.html
@@ -81,7 +81,7 @@
 	<div class="page-content-wrapper">
 		<div class="page-content">
 			<!-- BEGIN PAGE CONTENT-->
-			<div class="tiles">
+			<div class="tiles content-responsive">
               <div class="inner">
                 <a href="https://www.facebook.com/LiebherrConstruction?fref=ts">
 				<div class="tile bg-blue">
