--- a/create.html
+++ b/create.html
@@ -81,7 +81,7 @@
 	<div class="page-content-wrapper">
 		<div class="page-content">
 			<!-- BEGIN PAGE CONTENT-->
-			<div class="tiles">
+			<div class="tiles content-responsive">
               <div class="inner">
               	<a href ="createNew.html">
 				<div class="tile double bg-red">
