--- a/home-context-mining-excavator.html
+++ b/home-context-mining-excavator.html
@@ -82,7 +82,7 @@
         <div class="page-content">
             
             <!-- BEGIN PAGE CONTENT-->
-            <div class="tiles">
+            <div class="tiles content-responsive">
               <div class="inner">   
                 <a href="information-context-rotary-drilling-rig.html">
                 <div class="tile double-down bg-blue">
