--- a/home-context-my-toolbox.html
+++ b/home-context-my-toolbox.html
@@ -319,7 +319,7 @@ jQuery(document).ready(function() {
 
 <script> 
     $(function(){
-      $("#includeTopNavbar").load("snippets/top-navbar.html"); 
+      $("#includeTopNavbar").load("snippets/top-navbar-home.html"); 
     });
 </script> 
 
