--- a/collection-1.html
+++ b/collection-1.html
@@ -29,6 +29,7 @@
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700&subset=all" rel="stylesheet" type="text/css"/>
     <link href="assets/plugins/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
     <link href="assets/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+    <link href="assets_ltb/plugins/bootstrap/css/child/bootstrap.min-child.css" rel="stylesheet" type="text/css"/>
     <link href="assets/plugins/uniform/css/uniform.default.css" rel="stylesheet" type="text/css"/>
     <!-- END GLOBAL MANDATORY STYLES -->
     
@@ -115,8 +116,8 @@
 											 Documents
 										</li>
 									</ul>
-									<div class="row mix-grid thumbnails">
-										<div class="col-md-4 col-sm-6 mix category_2 mix_all" style="display: block; opacity: 1;">
+									<div class="row-collection mix-grid thumbnails">
+										<div class="col-md-44 mix category_2 mix_all" style="display: block; opacity: 1;">
 											<div class="mix-inner">
 												<img class="img-responsive" src="assets_ltb/img/Rotary-Drilling-Rig-6.jpg" alt="">
 												<div class="mix-details">
@@ -133,7 +134,7 @@
 												</div>
 											</div>
 										</div>
-										<div class="col-md-4 col-sm-6 mix category_2 mix_all" style="display: block; opacity: 1;">
+										<div class="col-md-44 mix category_2 mix_all" style="display: block; opacity: 1;">
 											<div class="mix-inner">
 												<img class="img-responsive" src="assets_ltb/img/Rotary-Drilling-Rig-2.jpg" alt="">
 												<div class="mix-details">
@@ -150,7 +151,7 @@
 												</div>
 											</div>
 										</div>
-                                        <div class="col-md-4 col-sm-6 mix category_2 mix_all" style="display: block; opacity: 1;">
+                                        <div class="col-md-44 mix category_2 mix_all" style="display: block; opacity: 1;">
 											<div class="mix-inner">
 												<img class="img-responsive" src="assets_ltb/img/Rotary-Drilling-Rig-3.jpg" alt="">
 												<div class="mix-details">
@@ -167,7 +168,7 @@
 												</div>
 											</div>
 										</div>
-                                        <div class="col-md-4 col-sm-6 mix category_2 mix_all" style="display: block; opacity: 1;">
+                                        <div class="col-md-44 mix category_2 mix_all" style="display: block; opacity: 1;">
 											<div class="mix-inner">
 												<img class="img-responsive" src="assets_ltb/img/Rotary-Drilling-Rig-4.jpg" alt="">
 												<div class="mix-details">
@@ -184,7 +185,7 @@
 												</div>
 											</div>
 										</div>
-                                        <div class="col-md-4 col-sm-6 mix category_2 mix_all" style="display: block; opacity: 1;">
+                                        <div class="col-md-44 mix category_2 mix_all" style="display: block; opacity: 1;">
 											<div class="mix-inner">
 												<img class="img-responsive" src="assets_ltb/img/Rotary-Drilling-Rig-5.jpg" alt="">
 												<div class="mix-details">
@@ -201,7 +202,7 @@
 												</div>
 											</div>
 										</div>
-										<div class="col-md-4 col-sm-6 mix category_1 mix_all" style="display: block; opacity: 1;">
+										<div class="col-md-44 mix category_1 mix_all" style="display: block; opacity: 1;">
 											<div class="mix-inner">
 												<img class="img-responsive" src="assets_ltb/img/Preview-video1.jpg" alt="">
 												<div class="mix-details">
@@ -218,7 +219,7 @@
 												</div>
 											</div>
 										</div>
-										<div class="col-md-4 col-sm-6 mix category_3 mix_all" style="display: block; opacity: 1;">
+										<div class="col-md-44 mix category_3 mix_all" style="display: block; opacity: 1;">
 											<div class="mix-inner">
 												<img class="img-responsive" src="assets_ltb/img/image-audio.jpg" alt="">
 												<div class="mix-details">
@@ -235,7 +236,7 @@
 												</div>
 											</div>
 										</div>
-										<div class="col-md-4 col-sm-6 mix category_3 mix_all" style="display: block; opacity: 1;">
+										<div class="col-md-44 mix category_3 mix_all" style="display: block; opacity: 1;">
 											<div class="mix-inner">
 												<img class="img-responsive" src="assets_ltb/img/image-audio.jpg" alt="">
 												<div class="mix-details">
@@ -252,7 +253,7 @@
 												</div>
 											</div>
 										</div>
-										<div class="col-md-4 col-sm-6 mix category_4 mix_all" style="display: block; opacity: 1;">
+										<div class="col-md-44 mix category_4 mix_all" style="display: block; opacity: 1;">
 											<div class="mix-inner">
 												<img class="img-responsive" src="assets_ltb/img/Preview-PDF-1.jpg" alt="">
 												<div class="mix-details">
@@ -266,7 +267,7 @@
 												</div>
 											</div>
 										</div>
-										<div class="col-md-4 col-sm-6 mix category_4 mix_all" style="display: block; opacity: 1;">
+										<div class="col-md-44 mix category_4 mix_all" style="display: block; opacity: 1;">
 											<div class="mix-inner">
 												<img class="img-responsive" src="assets_ltb/img/Preview-PDF-2.jpg" alt="">
 												<div class="mix-details">
@@ -280,7 +281,7 @@
 												</div>
 											</div>
 										</div>
-										<div class="col-md-4 col-sm-6 mix category_4 mix_all" style="display: block; opacity: 1;">
+										<div class="col-md-44 mix category_4 mix_all" style="display: block; opacity: 1;">
 											<div class="mix-inner">
 												<img class="img-responsive" src="assets_ltb/img/Preview-PDF-3.jpg" alt="">
 												<div class="mix-details">
@@ -294,7 +295,7 @@
 												</div>
 											</div>
 										</div>
-										<div class="col-md-4 col-sm-6 mix category_4 mix_all" style="display: block; opacity: 1;">
+										<div class="col-md-44 mix category_4 mix_all" style="display: block; opacity: 1;">
 											<div class="mix-inner">
 												<img class="img-responsive" src="assets_ltb/img/Preview-PDF-4.jpg" alt="">
 												<div class="mix-details">
