--- a/collection-2.html
+++ b/collection-2.html
@@ -29,6 +29,7 @@
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700&subset=all" rel="stylesheet" type="text/css"/>
     <link href="assets/plugins/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
     <link href="assets/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+    <link href="assets_ltb/plugins/bootstrap/css/child/bootstrap.min-child.css" rel="stylesheet" type="text/css"/>
     <link href="assets/plugins/uniform/css/uniform.default.css" rel="stylesheet" type="text/css"/>
     <!-- END GLOBAL MANDATORY STYLES -->
     
@@ -112,8 +113,8 @@
 											 Documents
 										</li>
 									</ul>
-									<div class="row mix-grid thumbnails">
-										<div class="col-md-4 col-sm-6 mix category_2 mix_all" style="display: block; opacity: 1;">
+									<div class="row-collection mix-grid thumbnails">
+										<div class="col-md-44 mix category_2 mix_all" style="display: block; opacity: 1;">
 											<div class="mix-inner">
 												<img class="img-responsive" src="assets_ltb/img/HS-845-1.jpg" alt="">
 												<div class="mix-details">
@@ -130,7 +131,7 @@
 												</div>
 											</div>
 										</div>
-										<div class="col-md-4 col-sm-6 mix category_2 mix_all" style="display: block; opacity: 1;">
+										<div class="col-md-44 mix category_2 mix_all" style="display: block; opacity: 1;">
 											<div class="mix-inner">
 												<img class="img-responsive" src="assets_ltb/img/HS-845-2.jpg" alt="">
 												<div class="mix-details">
@@ -147,7 +148,7 @@
 												</div>
 											</div>
 										</div>
-										<div class="col-md-4 col-sm-6 mix category_3 mix_all" style="display: block; opacity: 1;">
+										<div class="col-md-44 mix category_3 mix_all" style="display: block; opacity: 1;">
 											<div class="mix-inner">
 												<img class="img-responsive" src="assets_ltb/img/image-audio.jpg" alt="">
 												<div class="mix-details">
@@ -164,7 +165,7 @@
 												</div>
 											</div>
 										</div>
-										<div class="col-md-4 col-sm-6 mix category_4 mix_all" style="display: block; opacity: 1;">
+										<div class="col-md-44 mix category_4 mix_all" style="display: block; opacity: 1;">
 											<div class="mix-inner">
 												<img class="img-responsive" src="assets_ltb/img/Preview-PDF-5.jpg" alt="">
 												<div class="mix-details">
@@ -178,7 +179,7 @@
 												</div>
 											</div>
 										</div>
-										<div class="col-md-4 col-sm-6 mix category_4 mix_all" style="display: block; opacity: 1;">
+										<div class="col-md-44 mix category_4 mix_all" style="display: block; opacity: 1;">
 											<div class="mix-inner">
 												<img class="img-responsive" src="assets_ltb/img/Preview-PDF-6.jpg" alt="">
 												<div class="mix-details">
