--- a/profile-3.html
+++ b/profile-3.html
@@ -820,8 +820,8 @@
 											 Documents
 										</li>
 									</ul>
-									<div class="row mix-grid thumbnails">
-										<div class="col-md-4 col-sm-6 mix category_2 mix_all" style="display: block; opacity: 1;">
+									<div class="row-collection mix-grid thumbnails">
+										<div class="col-md-44 mix category_2 mix_all" style="display: block; opacity: 1;">
 											<div class="mix-inner">
 												<img class="img-responsive" src="assets_ltb/img/Rotary-Drilling-Rig-6.jpg" alt="">
 												<div class="mix-details">
@@ -838,7 +838,7 @@
 												</div>
 											</div>
 										</div>
-                                        <div class="col-md-4 col-sm-6 mix category_2 mix_all" style="display: block; opacity: 1;">
+                                        <div class="col-md-44 mix category_2 mix_all" style="display: block; opacity: 1;">
 											<div class="mix-inner">
 												<img class="img-responsive" src="assets_ltb/img/Rotary-Drilling-Rig-4.jpg" alt="">
 												<div class="mix-details">
@@ -855,7 +855,7 @@
 												</div>
 											</div>
 										</div>
-										<div class="col-md-4 col-sm-6 mix category_1 mix_all" style="display: block; opacity: 1;">
+										<div class="col-md-44 mix category_1 mix_all" style="display: block; opacity: 1;">
 											<div class="mix-inner">
 												<img class="img-responsive" src="assets_ltb/img/Preview-video1.jpg" alt="">
 												<div class="mix-details">
@@ -872,7 +872,7 @@
 												</div>
 											</div>
 										</div>
-										<div class="col-md-4 col-sm-6 mix category_3 mix_all" style="display: block; opacity: 1;">
+										<div class="col-md-44 mix category_3 mix_all" style="display: block; opacity: 1;">
 											<div class="mix-inner">
 												<img class="img-responsive" src="assets_ltb/img/image-audio.jpg" alt="">
 												<div class="mix-details">
@@ -889,7 +889,7 @@
 												</div>
 											</div>
 										</div>
-										<div class="col-md-4 col-sm-6 mix category_4 mix_all" style="display: block; opacity: 1;">
+										<div class="col-md-44 mix category_4 mix_all" style="display: block; opacity: 1;">
 											<div class="mix-inner">
 												<img class="img-responsive" src="assets_ltb/img/Preview-PDF-1.jpg" alt="">
 												<div class="mix-details">
@@ -903,7 +903,7 @@
 												</div>
 											</div>
 										</div>
-										<div class="col-md-4 col-sm-6 mix category_4 mix_all" style="display: block; opacity: 1;">
+										<div class="col-md-44 mix category_4 mix_all" style="display: block; opacity: 1;">
 											<div class="mix-inner">
 												<img class="img-responsive" src="assets_ltb/img/Preview-PDF-4.jpg" alt="">
 												<div class="mix-details">
