--- a/profile-4.html
+++ b/profile-4.html
@@ -816,8 +816,8 @@
 											 Documents
 										</li>
 									</ul>
-									<div class="row mix-grid thumbnails">
-										<div class="col-md-4 col-sm-6 mix category_1 mix_all" style="display: block; opacity: 1;">
+									<div class="row-collection mix-grid thumbnails">
+										<div class="col-md-44 mix category_1 mix_all" style="display: block; opacity: 1;">
 											<div class="mix-inner">
 												<img class="img-responsive" src="assets_ltb/img/Preview-video1.jpg" alt="">
 												<div class="mix-details">
@@ -834,7 +834,7 @@
 												</div>
 											</div>
 										</div>
-										<div class="col-md-4 col-sm-6 mix category_3 mix_all" style="display: block; opacity: 1;">
+										<div class="col-md-44 mix category_3 mix_all" style="display: block; opacity: 1;">
 											<div class="mix-inner">
 												<img class="img-responsive" src="assets_ltb/img/image-audio.jpg" alt="">
 												<div class="mix-details">
@@ -851,7 +851,7 @@
 												</div>
 											</div>
 										</div>
-										<div class="col-md-4 col-sm-6 mix category_3 mix_all" style="display: block; opacity: 1;">
+										<div class="col-md-44 mix category_3 mix_all" style="display: block; opacity: 1;">
 											<div class="mix-inner">
 												<img class="img-responsive" src="assets_ltb/img/image-audio.jpg" alt="">
 												<div class="mix-details">
@@ -868,7 +868,7 @@
 												</div>
 											</div>
 										</div>
-										<div class="col-md-4 col-sm-6 mix category_4 mix_all" style="display: block; opacity: 1;">
+										<div class="col-md-44 mix category_4 mix_all" style="display: block; opacity: 1;">
 											<div class="mix-inner">
 												<img class="img-responsive" src="assets_ltb/img/Preview-PDF-1.jpg" alt="">
 												<div class="mix-details">
@@ -882,7 +882,7 @@
 												</div>
 											</div>
 										</div>
-										<div class="col-md-4 col-sm-6 mix category_4 mix_all" style="display: block; opacity: 1;">
+										<div class="col-md-44 mix category_4 mix_all" style="display: block; opacity: 1;">
 											<div class="mix-inner">
 												<img class="img-responsive" src="assets_ltb/img/Preview-PDF-2.jpg" alt="">
 												<div class="mix-details">
@@ -896,7 +896,7 @@
 												</div>
 											</div>
 										</div>
-										<div class="col-md-4 col-sm-6 mix category_4 mix_all" style="display: block; opacity: 1;">
+										<div class="col-md-44 mix category_4 mix_all" style="display: block; opacity: 1;">
 											<div class="mix-inner">
 												<img class="img-responsive" src="assets_ltb/img/Preview-PDF-3.jpg" alt="">
 												<div class="mix-details">
