--- a/profile.html
+++ b/profile.html
@@ -820,10 +820,10 @@
 											 Documents
 										</li>
 									</ul>
-									<div class="row mix-grid thumbnails">
-										<div class="col-md-4 col-sm-6 mix category_2 mix_all" style="display: block; opacity: 1;">
+									<div class="row-collection mix-grid thumbnails">
+										<div class="col-md-44 mix category_2 mix_all" style="display: block; opacity: 1;">
 											<div class="mix-inner">
-												<img class="img-responsive" src="assets_ltb/img/Rotary-Drilling-Rig-6.jpg" alt="">
+												<img class="img-responsive"src="assets_ltb/img/Rotary-Drilling-Rig-6.jpg" alt="">
 												<div class="mix-details">
 													<h3>Preview Image</h3>
 													<p>
@@ -838,7 +838,7 @@
 												</div>
 											</div>
 										</div>
-										<div class="col-md-4 col-sm-6 mix category_2 mix_all" style="display: block; opacity: 1;">
+										<div class="col-md-44 mix category_2 mix_all" style="display: block; opacity: 1;">
 											<div class="mix-inner">
 												<img class="img-responsive" src="assets_ltb/img/Rotary-Drilling-Rig-2.jpg" alt="">
 												<div class="mix-details">
@@ -855,7 +855,7 @@
 												</div>
 											</div>
 										</div>
-                                        <div class="col-md-4 col-sm-6 mix category_2 mix_all" style="display: block; opacity: 1;">
+                                        <div class="col-md-44 mix category_2 mix_all" style="display: block; opacity: 1;">
 											<div class="mix-inner">
 												<img class="img-responsive" src="assets_ltb/img/Rotary-Drilling-Rig-3.jpg" alt="">
 												<div class="mix-details">
@@ -872,7 +872,7 @@
 												</div>
 											</div>
 										</div>
-                                        <div class="col-md-4 col-sm-6 mix category_2 mix_all" style="display: block; opacity: 1;">
+                                        <div class="col-md-44 mix category_2 mix_all" style="display: block; opacity: 1;">
 											<div class="mix-inner">
 												<img class="img-responsive" src="assets_ltb/img/Rotary-Drilling-Rig-4.jpg" alt="">
 												<div class="mix-details">
@@ -889,7 +889,7 @@
 												</div>
 											</div>
 										</div>
-                                        <div class="col-md-4 col-sm-6 mix category_2 mix_all" style="display: block; opacity: 1;">
+                                        <div class="col-md-44 mix category_2 mix_all" style="display: block; opacity: 1;">
 											<div class="mix-inner">
 												<img class="img-responsive" src="assets_ltb/img/Rotary-Drilling-Rig-5.jpg" alt="">
 												<div class="mix-details">
@@ -906,7 +906,7 @@
 												</div>
 											</div>
 										</div>
-										<div class="col-md-4 col-sm-6 mix category_1 mix_all" style="display: block; opacity: 1;">
+										<div class="col-md-44 mix category_1 mix_all" style="display: block; opacity: 1;">
 											<div class="mix-inner">
 												<img class="img-responsive" src="assets_ltb/img/Preview-video1.jpg" alt="">
 												<div class="mix-details">
@@ -923,7 +923,7 @@
 												</div>
 											</div>
 										</div>
-										<div class="col-md-4 col-sm-6 mix category_3 mix_all" style="display: block; opacity: 1;">
+										<div class="col-md-44 mix category_3 mix_all" style="display: block; opacity: 1;">
 											<div class="mix-inner">
 												<img class="img-responsive" src="assets_ltb/img/image-audio.jpg" alt="">
 												<div class="mix-details">
@@ -940,7 +940,7 @@
 												</div>
 											</div>
 										</div>
-										<div class="col-md-4 col-sm-6 mix category_3 mix_all" style="display: block; opacity: 1;">
+										<div class="col-md-44 mix category_3 mix_all" style="display: block; opacity: 1;">
 											<div class="mix-inner">
 												<img class="img-responsive" src="assets_ltb/img/image-audio.jpg" alt="">
 												<div class="mix-details">
@@ -957,7 +957,7 @@
 												</div>
 											</div>
 										</div>
-										<div class="col-md-4 col-sm-6 mix category_4 mix_all" style="display: block; opacity: 1;">
+										<div class="col-md-44 mix category_4 mix_all" style="display: block; opacity: 1;">
 											<div class="mix-inner">
 												<img class="img-responsive" src="assets_ltb/img/Preview-PDF-1.jpg" alt="">
 												<div class="mix-details">
@@ -971,7 +971,7 @@
 												</div>
 											</div>
 										</div>
-										<div class="col-md-4 col-sm-6 mix category_4 mix_all" style="display: block; opacity: 1;">
+										<div class="col-md-44 mix category_4 mix_all" style="display: block; opacity: 1;">
 											<div class="mix-inner">
 												<img class="img-responsive" src="assets_ltb/img/Preview-PDF-2.jpg" alt="">
 												<div class="mix-details">
@@ -985,7 +985,7 @@
 												</div>
 											</div>
 										</div>
-										<div class="col-md-4 col-sm-6 mix category_4 mix_all" style="display: block; opacity: 1;">
+										<div class="col-md-44 mix category_4 mix_all" style="display: block; opacity: 1;">
 											<div class="mix-inner">
 												<img class="img-responsive" src="assets_ltb/img/Preview-PDF-3.jpg" alt="">
 												<div class="mix-details">
@@ -999,7 +999,7 @@
 												</div>
 											</div>
 										</div>
-										<div class="col-md-4 col-sm-6 mix category_4 mix_all" style="display: block; opacity: 1;">
+										<div class="col-md-44 mix category_4 mix_all" style="display: block; opacity: 1;">
 											<div class="mix-inner">
 												<img class="img-responsive" src="assets_ltb/img/Preview-PDF-4.jpg" alt="">
 												<div class="mix-details">
