--- a/www/first-aid.html
+++ b/www/first-aid.html
@@ -82,7 +82,7 @@
 		<div class="page-content">
 			<!-- BEGIN PAGE CONTENT-->
 			<div class="tiles content-responsive">
-              <div class="inner">	
+              <div class="inner" style="width:300px">	
               	<a href="head-injury.html">
 				<div class="tile bg-purple">
 					<div class="tile-body">
