--- a/www/head-injury.html
+++ b/www/head-injury.html
@@ -157,7 +157,7 @@
 						</div>
 					</div>
 				<div class="tiles">
-	              <div class="inner">	
+	              <div class="inner" style="width:300px">	
 		              	<a href="first-aid.html">
 						<div class="tile bg-red">
 							<div class="tile-body">
