--- a/www/home-context-rotary-drilling-rig.html
+++ b/www/home-context-rotary-drilling-rig.html
@@ -156,7 +156,7 @@
                 </div>
                 </a>
                 <a href="socialmedia-context-minig-excavator.html">
-                <div class="tile bg-red">
+                <div class="tile bg-blue">
                     <img src="assets_ltb/img/social-button.png" width=115 height=115 VSPACE=0 alt="">
                     <div class="tile-object">
                         <div class="name">
