--- a/www/profile-0.html
+++ b/www/profile-0.html
@@ -82,7 +82,7 @@
     
 	<!-- BEGIN CONTENT -->
 	<div class="page-content-wrapper">
-		<div class="page-content" style="min-height:873px !important">
+		<div class="page-content" style="min-height:873px !important background-color:red">
 			<!-- BEGIN PAGE CONTENT-->
 			<div class="row profile content-responsive">
 				<div class="col-md-12">
