--- a/www/socialmedia-context-minig-excavator.html
+++ b/www/socialmedia-context-minig-excavator.html
@@ -82,7 +82,7 @@
 		<div class="page-content">
 			<!-- BEGIN PAGE CONTENT-->
 			<div class="tiles content-responsive">
-              <div class="inner">
+              <div class="inner"  style="width:300px">
                 <a href="https://www.facebook.com/LiebherrConstruction?fref=ts">
 				<div class="tile bg-blue">
 					<div class="tile-body">
